# web_homework2

./: AddressBook.py  Bot.py  Dockerfile  README.md  __main__.py  info.py  logs.txt  pyproject.toml  realizationIO.py
