[tool.poetry]
name = "web-homework2"
version = "0.1.0"
description = ""
authors = ["Taras <93609222+aps06@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
